RESOLVED FIXED131233
[New Multicolumn] widows and orphans cause assertion failures
https://bugs.webkit.org/show_bug.cgi?id=131233
Summary [New Multicolumn] widows and orphans cause assertion failures
Dave Hyatt
Reported 2014-04-04 11:14:24 PDT
Load http://www.quirksmode.org/css/css2/widows.html and watch it assert with spaceShortage > 0
Attachments
Patch (1.38 KB, patch)
2014-04-22 13:28 PDT, Dave Hyatt
dino: review+
Radar WebKit Bug Importer
Comment 1 2014-04-17 23:13:44 PDT
Dave Hyatt
Comment 2 2014-04-21 13:42:46 PDT
This does not block turning the new columns on.
Dave Hyatt
Comment 3 2014-04-22 13:28:51 PDT
Dave Hyatt
Comment 4 2014-04-22 13:32:19 PDT
Fixed in r167678.
Note You need to log in before you can comment on or make changes to this bug.