[New Multicolumn] widows/orphans cause assertion failures. https://bugs.webkit.org/show_bug.cgi?id=131233

Reviewed by Dean Jackson.

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::recordSpaceShortage):
Fix an obvious bug where the space shortage is recorded twice (and the
if statement that kept it from being negative is accidentally ignored).



Canonical link: https://commits.webkit.org/150095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167678 268f45cc-cd09-0410-ab3c-d52691b4dbfc